Fix sonar cloud step

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -26,7 +26,9 @@ jobs:
           path: target/jacoco.exec
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1.3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn -B -f pom.xml org.sonarsource.scanner.maven:sonar \
+          -Dsonar.projectKey='marcosDLCS_urjc_mca_ci_delivery' \
+          -Dsonar.projectName='URJC MCA CI-DELIVERY" \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
