Fix wrong quotation

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -29,6 +29,6 @@ jobs:
         run: |
           mvn -B -f pom.xml org.sonarsource.scanner.maven:sonar \
           -Dsonar.projectKey='marcosDLCS_urjc_mca_ci_delivery' \
-          -Dsonar.projectName='URJC MCA CI-DELIVERY" \
+          -Dsonar.projectName='URJC MCA CI-DELIVERY' \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
