--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -32,5 +32,7 @@ jobs:
           -Dsonar.projectName='URJC MCA CI-DELIVERY' \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.organization=marcosdlcs \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.java.coveragePlugin=jacoco \
+          -Dsonar.jacoco.reportPath=taget/jacoco.exec
 
