--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -17,8 +17,15 @@ jobs:
         with:
           java-version: 11
 
+      - uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build and test with Maven
-        run: mvn -B test -f pom.xml -Dtest="es.urjc.cloudapps.insurancecompany.unit.**"
+        run: mvn -B clean package -f pom.xml -Dtest="es.urjc.cloudapps.insurancecompany.unit.**"
 
       - name: Save Jacoco Exec
         uses: actions/upload-artifact@v2
@@ -26,7 +33,7 @@ jobs:
           name: jacoco_coverage.exec
           path: target/jacoco.exec
 
-      - name: Save Jacoco XML Repost
+      - name: Save Jacoco XML Report
         uses: actions/upload-artifact@v2
         with:
           name: jacoco_coverage_report.xml
