--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -57,7 +57,7 @@ jobs:
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
       - name: OWASP Dependency Check
-        run: mvn -B dependency-check:check
+        run: mvn -B dependency-check:check -f pom.xml
 
       - name: Save Dependency Check Report
         uses: actions/upload-artifact@v2
@@ -66,7 +66,7 @@ jobs:
           path: target/dependency-check-report.html
 
       - name: Mutation Testing
-        run: mvn -B dependency-check:check
+        run: mvn -B org.pitest:pitest-maven:mutationCoverage -f pom.xml
 
       - name: Save Mutation Testing Report
         uses: actions/upload-artifact@v2
