--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -2,7 +2,7 @@ name: 'Nightly'
 
 on:
   schedule:
-    - cron:  '1 3 * * *'
+    - cron:  '1 * * * *'
 
 jobs:
   nightly_build:
@@ -26,11 +26,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build, all tests and package with Maven
-        env:
-          PROJECT_VERSION: $(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout)
+      - name: Build, run all tests and package artifact with Maven
         run: |
-          mvn versions:set -DnewVersion=$PROJECT_VERSION.$GITHUB_SHA-SNAPSHOT
+          PROJECT_VERSION=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout)
+          NIGHTLY_VERSION=$(echo $GITHUB_SHA | cut -c1-8)
+          mvn versions:set -DnewVersion=$PROJECT_VERSION.$NIGHTLY_VERSION-SNAPSHOT
           mvn -B clean package -f pom.xml
 
       - name: Save Jacoco Exec
