Feat: Add batch mode to mvn versions on release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Build, run all tests and package artifact with Maven
         run: |
-          PROJECT_VERSION=$(mvn org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout)
-          mvn versions:set -DnewVersion=$PROJECT_VERSION-RELEASE
+          PROJECT_VERSION=$(mvn -B org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout)
+          mvn -B versions:set -DnewVersion=$PROJECT_VERSION-RELEASE
           mvn -B clean package -f pom.xml
 
       - name: Save Jacoco Exec
