--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.0.RELEASE</version>
+        <version>2.3.1.RELEASE</version>
         <relativePath/>
     </parent>
 
     <groupId>es.urjc.cloudapps</groupId>
     <artifactId>insurance-company</artifactId>
-    <version>4.0.0</version>
+    <version>5.0.0</version>
     <name>insurance-company</name>
     <description>Práctica. Integración y entrega continua. URJC Máster Cloud Apps</description>
 
@@ -25,6 +25,10 @@
         <pitest-junit5.version>0.12</pitest-junit5.version>
         <owasp.version>5.3.2</owasp.version>
         <jacoco.version>0.8.5</jacoco.version>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <java-money.version>1.3</java-money.version>
+        <apache-commons-lang.version>3.10</apache-commons-lang.version>
+        <postgresql.version>42.2.13</postgresql.version>
     </properties>
 
     <dependencyManagement>
@@ -76,7 +80,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.13</version>
+            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
@@ -88,25 +92,25 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.10</version>
+            <version>${apache-commons-lang.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.3.1.Final</version>
+            <version>${mapstruct.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-            <version>1.3.1.Final</version>
+            <version>${mapstruct.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.javamoney</groupId>
             <artifactId>moneta</artifactId>
-            <version>1.3</version>
+            <version>${java-money.version}</version>
             <type>pom</type>
         </dependency>
 
@@ -138,7 +142,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.14.3</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
