--- a/pom.xml
+++ b/pom.xml
@@ -6,29 +6,28 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.4.0-M4</version>
         <relativePath/>
     </parent>
 
     <groupId>es.urjc.cloudapps</groupId>
     <artifactId>insurance-company</artifactId>
-    <version>5.0.0</version>
+    <version>6.0.0</version>
     <name>insurance-company</name>
     <description>Práctica. Integración y entrega continua. URJC Máster Cloud Apps</description>
 
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>Hoxton.SR5</spring-cloud.version>
-        <springdoc-openapi.version>1.4.0</springdoc-openapi.version>
-        <testcontainers.version>1.14.3</testcontainers.version>
+        <spring-cloud.version>2020.0.0-SNAPSHOT</spring-cloud.version>
+        <springdoc-openapi.version>1.4.8</springdoc-openapi.version>
+        <testcontainers.version>1.15.0-rc2</testcontainers.version>
         <pitest.version>1.5.2</pitest.version>
         <pitest-junit5.version>0.12</pitest-junit5.version>
-        <owasp.version>5.3.2</owasp.version>
-        <jacoco.version>0.8.5</jacoco.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <java-money.version>1.3</java-money.version>
-        <apache-commons-lang.version>3.10</apache-commons-lang.version>
-        <postgresql.version>42.2.13</postgresql.version>
+        <owasp.version>6.0.2</owasp.version>
+        <jacoco.version>0.8.6</jacoco.version>
+        <mapstruct.version>1.4.1.Final</mapstruct.version>
+        <java-money.version>1.4.2</java-money.version>
+        <apache-commons-lang.version>3.11</apache-commons-lang.version>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +36,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -80,7 +86,6 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
@@ -142,21 +147,18 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -174,6 +176,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>marcosdlcs/${project.artifactId}:${project.version}</name>
+                    </image>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -244,5 +251,29 @@
             <url>https://maven.pkg.github.com/marcosDLCS/urjc_mca_ci_delivery</url>
         </repository>
     </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </pluginRepository>
+    </pluginRepositories>
+
 
 </project>
