--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0-M4</version>
+        <version>2.4.4</version>
         <relativePath/>
     </parent>
 
     <groupId>es.urjc.cloudapps</groupId>
     <artifactId>insurance-company</artifactId>
-    <version>6.0.0</version>
+    <version>8.0.0</version>
     <name>insurance-company</name>
     <description>Práctica. Integración y entrega continua. URJC Máster Cloud Apps</description>
 
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>2020.0.1-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>2020.0.1</spring-cloud.version>
         <springdoc-openapi.version>1.5.5</springdoc-openapi.version>
         <testcontainers.version>1.15.2</testcontainers.version>
         <pitest.version>1.6.4</pitest.version>
@@ -267,6 +267,7 @@
             </snapshots>
         </repository>
     </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>spring-milestones</id>
@@ -274,6 +275,5 @@
             <url>https://repo.spring.io/milestone</url>
         </pluginRepository>
     </pluginRepositories>
-
 
 </project>
