Update to Java 17 and some dependencies
- Adjust GH workflows

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -31,7 +31,7 @@ jobs:
           PROJECT_VERSION=$(mvn -B org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout)
           NIGHTLY_VERSION=$(echo $GITHUB_SHA | cut -c1-8)
           mvn -B versions:set -DnewVersion=$PROJECT_VERSION.$NIGHTLY_VERSION-SNAPSHOT
-          mvn -B clean package -f pom.xml
+          mvn -B clean verify -f pom.xml
 
       - name: Save Jacoco Exec
         uses: actions/upload-artifact@v2
