--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
 
       - name: Cache dependencies
         uses: actions/cache@v2
@@ -31,7 +31,7 @@ jobs:
           PROJECT_VERSION=$(mvn -B org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -q -DforceStdout)
           NIGHTLY_VERSION=$(echo $GITHUB_SHA | cut -c1-8)
           mvn -B versions:set -DnewVersion=$PROJECT_VERSION.$NIGHTLY_VERSION-SNAPSHOT
-          mvn -B clean package -f pom.xml
+          mvn -B clean verify -f pom.xml
 
       - name: Save Jacoco Exec
         uses: actions/upload-artifact@v2
