--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -41,8 +41,11 @@ jobs:
           path: target/site/jacoco/jacoco.xml
 
       - name: SonarCloud Scan
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn -B -f pom.xml sonar:sonar \
+          mvn -B verify sonar:sonar \
           -Dsonar.projectKey='marcosDLCS_urjc_mca_ci_delivery' \
           -Dsonar.projectName='URJC MCA CI-DELIVERY' \
           -Dsonar.host.url=https://sonarcloud.io \
@@ -50,4 +53,3 @@ jobs:
           -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
           -Dsonar.java.coveragePlugin=jacoco \
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-
