--- a/pom.xml
+++ b/pom.xml
@@ -6,29 +6,29 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version>
+        <version>3.2.2</version>
         <relativePath/>
     </parent>
 
     <groupId>es.urjc.cloudapps</groupId>
     <artifactId>insurance-company</artifactId>
-    <version>13.0.0</version>
+    <version>14.0.0</version>
     <name>insurance-company</name>
     <description>Práctica. Integración y entrega continua. URJC Máster Cloud Apps</description>
 
     <properties>
         <java.version>19</java.version>
         <!--  -->
-        <apache-commons-lang.version>3.12.0</apache-commons-lang.version>
-        <jacoco.version>0.8.8</jacoco.version>
-        <java-money.version>1.4.2</java-money.version>
-        <mapstruct.version>1.5.3.Final</mapstruct.version>
-        <owasp.version>8.0.2</owasp.version>
-        <pitest-junit5.version>1.1.2</pitest-junit5.version>
-        <pitest.version>1.11.0</pitest.version>
-        <spring-cloud.version>2022.0.1</spring-cloud.version>
-        <springdoc-openapi.version>1.6.14</springdoc-openapi.version>
-        <testcontainers.version>1.17.6</testcontainers.version>
+        <apache-commons-lang.version>3.14.0</apache-commons-lang.version>
+        <jacoco.version>0.8.11</jacoco.version>
+        <java-money.version>1.4.3</java-money.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <owasp.version>9.0.9</owasp.version>
+        <pitest-junit5.version>1.2.1</pitest-junit5.version>
+        <pitest.version>1.15.6</pitest.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <springdoc-openapi.version>2.3.0</springdoc-openapi.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -116,7 +116,7 @@
 
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc-openapi.version}</version>
         </dependency>
 
@@ -131,12 +131,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -188,8 +182,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
